--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -11,7 +11,7 @@
 
 //customer variables
 @import "./customize/variables";
-@import "./customize/utils";
+// @import "./customize/utils";
 
 //bootstrap
 @import "../../node_modules/bootstrap";
