0917 nootbook nav font size 13px

--- a/assets/scss/base/_utils.scss
+++ b/assets/scss/base/_utils.scss
@@ -8,7 +8,8 @@ $headings: (
     xlarge:       (36px, 0),
     medium:       (28px, 0),
     small:        (24px, 0),
-    xsmall:       (20px, 0)
+    xsmall:       (20px, 0),
+    xxsmall:      (13px, 0),
 );
 
 // 通用 mixin heading
