--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,8 @@
-// google 字體
-@import url('<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">');
-
+// google 字體 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+//bootstrap icon
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+ 
 @font-face {
   font-family: cy2;
   src: url('../fonts/ChenYuluoyan-2.0-Thin.woff2') format('woff2') 
