0918 back to up botton

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -32,6 +32,7 @@
 //layout
 @import './layout/header';
 @import './layout/footer';
+@import './layout/btup';
 // @import './layout/title';
 
 //pages
