--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -37,7 +37,7 @@ body {
   .header1 {
     height: calc(100vh - 88px);
     background-size: cover;
-    background-image: url(/images/index/banner1.png);
+    background-image: url(/imagesjpg/index/banner1.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
