--- a/assets/scss/pages/_explore.scss
+++ b/assets/scss/pages/_explore.scss
@@ -60,7 +60,7 @@
 
   .content {
     &.bg1 {
-      background-image: url(/images/explore/explore-bg1.png);
+      background-image: url(/imagesjpg/explore/explore-bg1.jpg);
       // 推
       padding-top: 315px;
       padding-left: 312px;
