--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -146,7 +146,7 @@
   .header2{
     height: 160px; //-88px;
     background-size: cover;
-    background-image: url(/images/products/banner1.png);
+    background-image: url(/images/products/banner1.jpg);
     background-repeat: no-repeat;
     background-position: center bottom; // 72%
     position: relative;
