--- a/assets/scss/pages/_proudcts.scss
+++ b/assets/scss/pages/_proudcts.scss
@@ -150,7 +150,7 @@
     background-repeat: no-repeat;
     background-position: center bottom; // 72%
     position: relative;
-    background-color: rgba(#312000, 0.4);
+    background-color: rgba(#312000, 0.5);
     background-blend-mode: multiply;
   }
 
@@ -197,11 +197,11 @@
   .header2{
     height: 400px; //-88px;
     background-size: cover;
-    background-image: url(/images/products/banner1.png);
+    background-image: url(/images/products/banner1.jpg);
     background-repeat: no-repeat;
     background-position: center 72%;
     position: relative;
-    background-color: rgba(#312000, 0.4);
+    background-color: rgba(#312000, 0.5);
     background-blend-mode: multiply;
   }
 
