--- a/assets/scss/base/_button.scss
+++ b/assets/scss/base/_button.scss
@@ -38,3 +38,17 @@
         border: 1px solid $primary-200;
     }
 }
+
+.btn4 {
+    padding: 12px 24px;
+    border-radius: 10px;
+    background-color: transparent;
+    color: $primary-700;
+    border: 1px solid $primary-700;
+    text-decoration: none;
+
+    &:hover {
+      color: $grey-0;
+       background-color: $primary-700
+    }
+}
