0923 header same as main

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -4,12 +4,17 @@
     <div class="row align-items-center" style="min-height: var(--header-h)">
       <!-- 左：導覽（漢堡 + 桌機連結） -->
       <div class="col-2 col-md-4">
-        <nav class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
+        <nav
+          class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
           <!-- 漢堡（控制下面的 #mobileMenu 面板） -->
-          <button class="navbar-toggler border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#mobileMenu"
-                  aria-controls="mobileMenu" aria-expanded="false"
-                  aria-label="切換導覽選單">
+          <button
+            class="navbar-toggler border-0"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mobileMenu"
+            aria-controls="mobileMenu"
+            aria-expanded="false"
+            aria-label="切換導覽選單">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -19,10 +24,14 @@
               <a class="nav-link d-inline-block" href="about.html">關於羊蹄</a>
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="products.html">線上商店</a>
+              <a class="nav-link d-inline-block" href="products.html"
+                >線上商店</a
+              >
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="explore.html">探索風味</a>
+              <a class="nav-link d-inline-block" href="explore.html"
+                >探索風味</a
+              >
             </li>
           </ul>
         </nav>
@@ -39,10 +48,18 @@
       <div class="col-2 col-md-4">
         <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link me-12 icon" href="#" aria-label="購物車">
-            <img src="/images/header/ic_Shopping_Cart.svg" alt="" width="26" height="26" />
+            <img
+              src="/images/header/ic_Shopping_Cart.svg"
+              alt=""
+              width="26"
+              height="26" />
           </a>
           <a class="nav-link icon" href="#" aria-label="會員">
-            <img src="/images/header/ic_User.svg" alt="" width="24" height="30" />
+            <img
+              src="/images/header/ic_User.svg"
+              alt=""
+              width="24"
+              height="30" />
           </a>
         </nav>
       </div>
@@ -54,12 +71,15 @@
 <div id="mobileMenu" class="collapse mobile-menu-panel" data-bs-parent="body">
   <nav class="container">
     <ul class="list-unstyled mb-0">
-      <li class="py-2 text-center"><a class="menu-link" href="about.html">關於羊蹄</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="products.html">線上商店</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="explore.html">探索風味</a></li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="about.html">關於羊蹄</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="products.html">線上商店</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="explore.html">探索風味</a>
+      </li>
     </ul>
   </nav>
 </div>
-
-
-
