--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -43,9 +43,12 @@
 
 
 /* breadcrumb 分隔 */
-.breadcrumb{ flex-wrap: nowrap; }
+.breadcrumb{ 
+  flex-wrap: nowrap; 
+}
+
 .breadcrumb-item + .breadcrumb-item::before{
-  content: var(--bs-breadcrumb-divider, "/");
+  content:  "/";
   color: $primary-50;
   padding-left: 12px; padding-right: 12px;
   float: none;
