--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -48,7 +48,7 @@
 }
 
 .breadcrumb-item + .breadcrumb-item::before{
-  content:  "/" !important;
+  content:  "/" ;
   color: $primary-50;
   padding-left: 12px; padding-right: 12px;
   float: none;
