--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -42,22 +42,27 @@
 
 
 
+
 /* breadcrumb 分隔 */
-.breadcrumb{ 
+header .breadcrumb{ 
   flex-wrap: nowrap; 
+  .nav-link{
+    color: $primary-50;
+  }
 }
 
-.breadcrumb-item + .breadcrumb-item::before{
+
+header .breadcrumb-item + .breadcrumb-item::before{
   color: $primary-50;
   padding-left: 12px; padding-right: 12px;
   float: none;
 }
 @media (max-width: 768px){
-  .breadcrumb-item + .breadcrumb-item::before{ display:none; }
+  header .breadcrumb-item + .breadcrumb-item::before{ display:none; }
 }
 
-/* hover 色 */
-.header-hover:hover{ color: $accent-300; }
+  /* hover 色 */
+header .header-hover:hover{ color: $accent-300; }
 
 /* LOGO RWD */
 .logo{
