add header md px py

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -40,7 +40,7 @@
       <!-- 中：LOGO -->
       <div class="col-8 col-md-4 text-center">
         <div
-          class="logo-wrap d-flex justify-content-center flex-grow-1 py-15 px-96">
+          class="logo-wrap d-flex justify-content-center flex-grow-1 py-md-15 px-md-96">
           <a class="navbar-brand logo d-inline-block" href="index.html"></a>
         </div>
       </div>
