--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -11,9 +11,11 @@
 }
 
 
-.px-96{
-  padding-left: 96px;
-  padding-right: 96px;
+.px-md-96{
+  @media (max-width:768px) {
+    padding-left: 96px;
+    padding-right: 96px;  
+  }
 }
 
 .pd-18{
@@ -70,7 +72,7 @@
             saturate(300%) hue-rotate(350deg) brightness(102%) contrast(97%);
   }
 
-  @media (max-width: 767.98px){
+  @media (max-width: 768px){
     width:40px; height:40px;
     background-image: url("/images/header/small-logo.svg");
   }
